--- a/Grail/View/MainWindow.xaml
+++ b/Grail/View/MainWindow.xaml
@@ -3,14 +3,21 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Grail"
         xmlns:viewModel="clr-namespace:Grail.ViewModel"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance viewModel:MainWindowViewModel}" 
         Title="{Binding Source={x:Static viewModel:MainWindowViewModel.Title}, Mode=OneWay}"
-        Height="300" Width="300">
+        d:DesignWidth="526" d:DesignHeight="326"
+        Width="526" Height="326"
+       >
     <StackPanel Orientation="Vertical">
-        <Label Content="{Binding Path=Version}" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Image Source="grail.png" Stretch="None"/>
+        <StackPanel Orientation="Horizontal">
+            <Label Content="{Binding Path=Version}" Margin="6,0,0,0" HorizontalAlignment="Left" />
+        </StackPanel>
+        <StackPanel Orientation="Horizontal">
+            <Button Content="Update" Margin="6,0,6,0" IsEnabled="{Binding Path=UpdateAvailable, Mode=OneWay}" Command="{Binding Path=ApplyUpdateCommand, Mode=OneWay}"/>
+            <Label Content="{Binding Path=UpdateInformation}" HorizontalAlignment="Left" />
+        </StackPanel>
+        <Image Source="grail.png" Margin="0,10,0,10" Stretch="None" VerticalAlignment="Center"/>
     </StackPanel>
 </Window>
