--- a/Grail/App.xaml
+++ b/Grail/App.xaml
@@ -2,9 +2,10 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Grail"
-             Startup = "Application_Start"
+             Startup="Application_Start"
+             Exit="Application_Exit"
              >
     <Application.Resources>
-         
+
     </Application.Resources>
 </Application>
